- Fixed jumpy up/down resizing. - Fixed z-index for selected callouts.

--- a/styles.scss
+++ b/styles.scss
@@ -180,6 +180,7 @@ textarea {
     &.selected {
         outline: 2px solid #e74c3c;
         outline-offset: 2px;
+        z-index: 15;
 
         .resize-handle {
             opacity: 1;
